<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MeasureDirectorActivity">

    <LinearLayout   android:id="@+id/lyStart"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_weight=".5"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_weight=".2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_device"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView       android:id="@+id/lblChosenDevice"
                android:layout_weight=".8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test device HR"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_weight=".2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_status" />

            <TextView       android:id="@+id/lblConnected"
                android:layout_weight=".8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_disconnected" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_weight=".5"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/lblHeartBeat"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="65 HR 1050 RR" />

        <TextView android:id="@+id/lblTime"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight=".5"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight=".2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/lbl_tag" />

        <EditText       android:id="@+id/edTag"
            android:layout_weight=".8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbLaunchNow"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#ffffffff"
        app:srcCompat="@drawable/ic_heart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbStop"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#ffffffff"
        app:srcCompat="@drawable/ic_stop" />

</LinearLayout>