<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/lbl_device" />

            <ImageButton    android:id="@+id/btScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:backgroundTint="#00ffffff"
                app:srcCompat="@drawable/ic_bluetooth_search" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_weight=".23"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight=".3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="Chosen device" />

            <TextView   android:id="@+id/lbl_chosen_device"
                android:layout_weight=".7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_weight=".23"
            android:layout_height="wrap_content">

            <ListView        android:id="@+id/lvDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_weight=".33"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/action_measure_heartvar" />

            <ImageButton        android:id="@+id/btMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:backgroundTint="#00ffffff"
                app:srcCompat="@drawable/ic_heart" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_weight=".33"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/action_chk_results" />

            <ImageButton        android:id="@+id/btResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:backgroundTint="#00ffffff"
                app:srcCompat="@drawable/ic_report" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>